--- a/.env
+++ b/.env
@@ -26,3 +26,9 @@ APP_SECRET=2e09317b639f1f39c7db975426c60496
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/todolist
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=e1373c813abb1675f9c3f48d98092965
+###< lexik/jwt-authentication-bundle ###
