--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,7 +3,11 @@
 #    controller: App\Controller\DefaultController::index
 
 api_login_check:
-    path: /api/login_check
+  path: /api/login_check
+
+gesdinet_jwt_refresh_token:
+  path: /api/token/refresh
+  controller: gesdinet.jwtrefreshtoken::refresh
 
 lists:
   type:     rest
@@ -20,3 +24,7 @@ notes:
   resource: App\Controller\NoteController
   prefix:   api
 
+preferences:
+  type:     rest
+  resource: App\Controller\PreferenceController
+  prefix:   api
