--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
+APP_URL=http://localhost:8000/
 APP_ENV=dev
 APP_SECRET=2e09317b639f1f39c7db975426c60496
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
@@ -28,7 +29,11 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/todolist
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=e1373c813abb1675f9c3f48d98092965
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/id_rsa
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/id_rsa.pub
+JWT_PASSPHRASE=reubenporter
 ###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
